# backend/video_storage_server/docs/swagger.yaml
@@ -208,7 +208,7 @@ paths:
       summary: Uploading unsafe file
       tags:
       - upload
-  /videolist:
+  /videolist/all:
     get:
       consumes:
       - application/json
@@ -225,6 +225,35 @@ paths:
           schema:
             $ref: '#/definitions/controllers.ItemsError'
       summary: All the video items
+      tags:
+      - videolist
+  /videolist/lastn:
+    get:
+      consumes:
+      - application/json
+      description: get VideoItemsList by number_of_videos (int)
+      parameters:
+      - description: Number of last videos to represent
+        in: query
+        name: number_of_videos
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.VideoItemList'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controllers.ItemsError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controllers.ItemsError'
+      summary: Last number_of_videos created Video Items
       tags:
       - videolist
 swagger: "2.0"
